tests/snapshots/snapshot_fixtures__fixtures__continue_while.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/continue_while.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn sum_skipping_threes(%arg0: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %16 = alloca s32i, "n", align 4
        %17 = alloca s32i, "__retval", align 4
        %18 = alloca s32i, "total", align 4
        %19 = alloca s32i, "i", align 4
        store %arg0, %16
        %20 = const 0 : s32i
        store %20, %18, align 4
        %21 = const 0 : s32i
        store %21, %19, align 4
        scope {
            while {
                %34 = load %19 : s32i, align 4
                %35 = load %16 : s32i, align 4
                %36 = cmp lt %34, %35 : bool
                condition %36
            } do {
                scope {
                    %24 = load %19 : s32i, align 4
                    %25 = inc %24 : s32i [nsw]
                    store %25, %19, align 4
                    scope {
                        %29 = load %19 : s32i, align 4
                        %30 = const 3 : s32i
                        %31 = rem %29, %30 : s32i
                        %32 = const 0 : s32i
                        %33 = cmp eq %31, %32 : bool
                        if %33 {
                            continue
                        }
                        yield
                    }
                    %26 = load %19 : s32i, align 4
                    %27 = load %18 : s32i, align 4
                    %28 = add %27, %26 : s32i [nsw]
                    store %28, %18, align 4
                    yield
                }
                yield
            }
            yield
        }
        %22 = load %18 : s32i, align 4
        store %22, %17
        %23 = load %17 : s32i
        return %23
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str : s8i[4]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = const 10 : s32i
    %6 = call @sum_skipping_threes(%5) : s32i [all]
    %7 = call @printf(%4, %6) : s32i [all]
    %8 = get_global @printf : ((s8i*, ...) -> s32i)*
    %9 = get_global @.str : s8i[4]*
    %10 = cast(array_to_ptrdecay) %9 : s8i*
    %11 = const 2 : s32i
    %12 = call @sum_skipping_threes(%11) : s32i [all]
    %13 = call @printf(%10, %12) : s32i [all]
    %14 = const 0 : s32i
    store %14, %0
    %15 = load %0 : s32i
    return %15
}
