tests/snapshots/snapshot_fixtures__fixtures__ctype_classify_fixup.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/ctype_classify_fixup.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[11] = "alpha-yes\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[10] = "alpha-no\n" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[15] = "not-alpha-yes\n" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[14] = "not-alpha-no\n" [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[11] = "digit-yes\n" [cir_private, default, align 1, dso_local, constant]
global .str.5 : s8i[10] = "digit-no\n" [cir_private, default, align 1, dso_local, constant]
global .str.6 : s8i[11] = "upper-yes\n" [cir_private, default, align 1, dso_local, constant]
global .str.7 : s8i[10] = "upper-no\n" [cir_private, default, align 1, dso_local, constant]
global .str.8 : s8i[11] = "lower-yes\n" [cir_private, default, align 1, dso_local, constant]
global .str.9 : s8i[10] = "lower-no\n" [cir_private, default, align 1, dso_local, constant]
global .str.10 : s8i[11] = "alnum-yes\n" [cir_private, default, align 1, dso_local, constant]
global .str.11 : s8i[10] = "alnum-no\n" [cir_private, default, align 1, dso_local, constant]
global .str.12 : s8i[12] = "xdigit-yes\n" [cir_private, default, align 1, dso_local, constant]
global .str.13 : s8i[11] = "xdigit-no\n" [cir_private, default, align 1, dso_local, constant]
global .str.14 : s8i[11] = "punct-yes\n" [cir_private, default, align 1, dso_local, constant]
global .str.15 : s8i[10] = "punct-no\n" [cir_private, default, align 1, dso_local, constant]
global .str.16 : s8i[11] = "cntrl-yes\n" [cir_private, default, align 1, dso_local, constant]
global .str.17 : s8i[10] = "cntrl-no\n" [cir_private, default, align 1, dso_local, constant]
global .str.18 : s8i[11] = "graph-yes\n" [cir_private, default, align 1, dso_local, constant]
global .str.19 : s8i[10] = "graph-no\n" [cir_private, default, align 1, dso_local, constant]
global .str.20 : s8i[11] = "print-yes\n" [cir_private, default, align 1, dso_local, constant]
global .str.21 : s8i[10] = "print-no\n" [cir_private, default, align 1, dso_local, constant]
global .str.22 : s8i[11] = "space-yes\n" [cir_private, default, align 1, dso_local, constant]
global .str.23 : s8i[10] = "space-no\n" [cir_private, default, align 1, dso_local, constant]
global .str.24 : s8i[16] = "vtab-space-yes\n" [cir_private, default, align 1, dso_local, constant]
global .str.25 : s8i[15] = "vtab-space-no\n" [cir_private, default, align 1, dso_local, constant]
global .str.26 : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn __ctype_b_loc() -> u16i** [external, c, const, nothrow];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s8i, "alpha", align 1
    %2 = alloca s8i, "digit", align 1
    %3 = alloca s8i, "space", align 1
    %4 = alloca s8i, "vtab", align 1
    %5 = alloca s8i, "punct", align 1
    %6 = const 0 : s32i
    store %6, %0
    %7 = const 65 : s8i
    store %7, %1, align 1
    %8 = const 53 : s8i
    store %8, %2, align 1
    %9 = const 32 : s8i
    store %9, %3, align 1
    %10 = const 11 : s8i
    store %10, %4, align 1
    %11 = const 33 : s8i
    store %11, %5, align 1
    scope {
        %257 = load %1 : s8i, align 1
        %258 = cast(integral) %257 : s32i
        %259 = cast(integral) %258 : s64i
        %260 = call @__ctype_b_loc() : u16i** [const]
        %261 = load %260 : u16i*, align 8
        %262 = ptr_stride %261, %259 : u16i*
        %263 = load %262 : u16i, align 2
        %264 = cast(integral) %263 : s32i
        %265 = const 1024 : s32i
        %266 = and %264, %265 : s32i
        %267 = cast(int_to_bool) %266 : bool
        if %267 {
            %272 = get_global @printf : ((s8i*, ...) -> s32i)*
            %273 = get_global @.str : s8i[11]*
            %274 = cast(array_to_ptrdecay) %273 : s8i*
            %275 = call @printf(%274) : s32i [all]
            yield
        } else {
            %268 = get_global @printf : ((s8i*, ...) -> s32i)*
            %269 = get_global @.str.1 : s8i[10]*
            %270 = cast(array_to_ptrdecay) %269 : s8i*
            %271 = call @printf(%270) : s32i [all]
            yield
        }
        yield
    }
    scope {
        %237 = load %2 : s8i, align 1
        %238 = cast(integral) %237 : s32i
        %239 = cast(integral) %238 : s64i
        %240 = call @__ctype_b_loc() : u16i** [const]
        %241 = load %240 : u16i*, align 8
        %242 = ptr_stride %241, %239 : u16i*
        %243 = load %242 : u16i, align 2
        %244 = cast(integral) %243 : s32i
        %245 = const 1024 : s32i
        %246 = and %244, %245 : s32i
        %247 = cast(int_to_bool) %246 : bool
        %248 = not %247 : bool
        if %248 {
            %253 = get_global @printf : ((s8i*, ...) -> s32i)*
            %254 = get_global @.str.2 : s8i[15]*
            %255 = cast(array_to_ptrdecay) %254 : s8i*
            %256 = call @printf(%255) : s32i [all]
            yield
        } else {
            %249 = get_global @printf : ((s8i*, ...) -> s32i)*
            %250 = get_global @.str.3 : s8i[14]*
            %251 = cast(array_to_ptrdecay) %250 : s8i*
            %252 = call @printf(%251) : s32i [all]
            yield
        }
        yield
    }
    scope {
        %218 = load %2 : s8i, align 1
        %219 = cast(integral) %218 : s32i
        %220 = cast(integral) %219 : s64i
        %221 = call @__ctype_b_loc() : u16i** [const]
        %222 = load %221 : u16i*, align 8
        %223 = ptr_stride %222, %220 : u16i*
        %224 = load %223 : u16i, align 2
        %225 = cast(integral) %224 : s32i
        %226 = const 2048 : s32i
        %227 = and %225, %226 : s32i
        %228 = cast(int_to_bool) %227 : bool
        if %228 {
            %233 = get_global @printf : ((s8i*, ...) -> s32i)*
            %234 = get_global @.str.4 : s8i[11]*
            %235 = cast(array_to_ptrdecay) %234 : s8i*
            %236 = call @printf(%235) : s32i [all]
            yield
        } else {
            %229 = get_global @printf : ((s8i*, ...) -> s32i)*
            %230 = get_global @.str.5 : s8i[10]*
            %231 = cast(array_to_ptrdecay) %230 : s8i*
            %232 = call @printf(%231) : s32i [all]
            yield
        }
        yield
    }
    scope {
        %199 = load %1 : s8i, align 1
        %200 = cast(integral) %199 : s32i
        %201 = cast(integral) %200 : s64i
        %202 = call @__ctype_b_loc() : u16i** [const]
        %203 = load %202 : u16i*, align 8
        %204 = ptr_stride %203, %201 : u16i*
        %205 = load %204 : u16i, align 2
        %206 = cast(integral) %205 : s32i
        %207 = const 256 : s32i
        %208 = and %206, %207 : s32i
        %209 = cast(int_to_bool) %208 : bool
        if %209 {
            %214 = get_global @printf : ((s8i*, ...) -> s32i)*
            %215 = get_global @.str.6 : s8i[11]*
            %216 = cast(array_to_ptrdecay) %215 : s8i*
            %217 = call @printf(%216) : s32i [all]
            yield
        } else {
            %210 = get_global @printf : ((s8i*, ...) -> s32i)*
            %211 = get_global @.str.7 : s8i[10]*
            %212 = cast(array_to_ptrdecay) %211 : s8i*
            %213 = call @printf(%212) : s32i [all]
            yield
        }
        yield
    }
    scope {
        %180 = load %1 : s8i, align 1
        %181 = cast(integral) %180 : s32i
        %182 = cast(integral) %181 : s64i
        %183 = call @__ctype_b_loc() : u16i** [const]
        %184 = load %183 : u16i*, align 8
        %185 = ptr_stride %184, %182 : u16i*
        %186 = load %185 : u16i, align 2
        %187 = cast(integral) %186 : s32i
        %188 = const 512 : s32i
        %189 = and %187, %188 : s32i
        %190 = cast(int_to_bool) %189 : bool
        if %190 {
            %195 = get_global @printf : ((s8i*, ...) -> s32i)*
            %196 = get_global @.str.8 : s8i[11]*
            %197 = cast(array_to_ptrdecay) %196 : s8i*
            %198 = call @printf(%197) : s32i [all]
            yield
        } else {
            %191 = get_global @printf : ((s8i*, ...) -> s32i)*
            %192 = get_global @.str.9 : s8i[10]*
            %193 = cast(array_to_ptrdecay) %192 : s8i*
            %194 = call @printf(%193) : s32i [all]
            yield
        }
        yield
    }
    scope {
        %161 = load %5 : s8i, align 1
        %162 = cast(integral) %161 : s32i
        %163 = cast(integral) %162 : s64i
        %164 = call @__ctype_b_loc() : u16i** [const]
        %165 = load %164 : u16i*, align 8
        %166 = ptr_stride %165, %163 : u16i*
        %167 = load %166 : u16i, align 2
        %168 = cast(integral) %167 : s32i
        %169 = const 8 : s32i
        %170 = and %168, %169 : s32i
        %171 = cast(int_to_bool) %170 : bool
        if %171 {
            %176 = get_global @printf : ((s8i*, ...) -> s32i)*
            %177 = get_global @.str.10 : s8i[11]*
            %178 = cast(array_to_ptrdecay) %177 : s8i*
            %179 = call @printf(%178) : s32i [all]
            yield
        } else {
            %172 = get_global @printf : ((s8i*, ...) -> s32i)*
            %173 = get_global @.str.11 : s8i[10]*
            %174 = cast(array_to_ptrdecay) %173 : s8i*
            %175 = call @printf(%174) : s32i [all]
            yield
        }
        yield
    }
    scope {
        %142 = load %1 : s8i, align 1
        %143 = cast(integral) %142 : s32i
        %144 = cast(integral) %143 : s64i
        %145 = call @__ctype_b_loc() : u16i** [const]
        %146 = load %145 : u16i*, align 8
        %147 = ptr_stride %146, %144 : u16i*
        %148 = load %147 : u16i, align 2
        %149 = cast(integral) %148 : s32i
        %150 = const 4096 : s32i
        %151 = and %149, %150 : s32i
        %152 = cast(int_to_bool) %151 : bool
        if %152 {
            %157 = get_global @printf : ((s8i*, ...) -> s32i)*
            %158 = get_global @.str.12 : s8i[12]*
            %159 = cast(array_to_ptrdecay) %158 : s8i*
            %160 = call @printf(%159) : s32i [all]
            yield
        } else {
            %153 = get_global @printf : ((s8i*, ...) -> s32i)*
            %154 = get_global @.str.13 : s8i[11]*
            %155 = cast(array_to_ptrdecay) %154 : s8i*
            %156 = call @printf(%155) : s32i [all]
            yield
        }
        yield
    }
    scope {
        %123 = load %5 : s8i, align 1
        %124 = cast(integral) %123 : s32i
        %125 = cast(integral) %124 : s64i
        %126 = call @__ctype_b_loc() : u16i** [const]
        %127 = load %126 : u16i*, align 8
        %128 = ptr_stride %127, %125 : u16i*
        %129 = load %128 : u16i, align 2
        %130 = cast(integral) %129 : s32i
        %131 = const 4 : s32i
        %132 = and %130, %131 : s32i
        %133 = cast(int_to_bool) %132 : bool
        if %133 {
            %138 = get_global @printf : ((s8i*, ...) -> s32i)*
            %139 = get_global @.str.14 : s8i[11]*
            %140 = cast(array_to_ptrdecay) %139 : s8i*
            %141 = call @printf(%140) : s32i [all]
            yield
        } else {
            %134 = get_global @printf : ((s8i*, ...) -> s32i)*
            %135 = get_global @.str.15 : s8i[10]*
            %136 = cast(array_to_ptrdecay) %135 : s8i*
            %137 = call @printf(%136) : s32i [all]
            yield
        }
        yield
    }
    scope {
        %104 = load %4 : s8i, align 1
        %105 = cast(integral) %104 : s32i
        %106 = cast(integral) %105 : s64i
        %107 = call @__ctype_b_loc() : u16i** [const]
        %108 = load %107 : u16i*, align 8
        %109 = ptr_stride %108, %106 : u16i*
        %110 = load %109 : u16i, align 2
        %111 = cast(integral) %110 : s32i
        %112 = const 2 : s32i
        %113 = and %111, %112 : s32i
        %114 = cast(int_to_bool) %113 : bool
        if %114 {
            %119 = get_global @printf : ((s8i*, ...) -> s32i)*
            %120 = get_global @.str.16 : s8i[11]*
            %121 = cast(array_to_ptrdecay) %120 : s8i*
            %122 = call @printf(%121) : s32i [all]
            yield
        } else {
            %115 = get_global @printf : ((s8i*, ...) -> s32i)*
            %116 = get_global @.str.17 : s8i[10]*
            %117 = cast(array_to_ptrdecay) %116 : s8i*
            %118 = call @printf(%117) : s32i [all]
            yield
        }
        yield
    }
    scope {
        %85 = load %5 : s8i, align 1
        %86 = cast(integral) %85 : s32i
        %87 = cast(integral) %86 : s64i
        %88 = call @__ctype_b_loc() : u16i** [const]
        %89 = load %88 : u16i*, align 8
        %90 = ptr_stride %89, %87 : u16i*
        %91 = load %90 : u16i, align 2
        %92 = cast(integral) %91 : s32i
        %93 = const 32768 : s32i
        %94 = and %92, %93 : s32i
        %95 = cast(int_to_bool) %94 : bool
        if %95 {
            %100 = get_global @printf : ((s8i*, ...) -> s32i)*
            %101 = get_global @.str.18 : s8i[11]*
            %102 = cast(array_to_ptrdecay) %101 : s8i*
            %103 = call @printf(%102) : s32i [all]
            yield
        } else {
            %96 = get_global @printf : ((s8i*, ...) -> s32i)*
            %97 = get_global @.str.19 : s8i[10]*
            %98 = cast(array_to_ptrdecay) %97 : s8i*
            %99 = call @printf(%98) : s32i [all]
            yield
        }
        yield
    }
    scope {
        %66 = load %3 : s8i, align 1
        %67 = cast(integral) %66 : s32i
        %68 = cast(integral) %67 : s64i
        %69 = call @__ctype_b_loc() : u16i** [const]
        %70 = load %69 : u16i*, align 8
        %71 = ptr_stride %70, %68 : u16i*
        %72 = load %71 : u16i, align 2
        %73 = cast(integral) %72 : s32i
        %74 = const 16384 : s32i
        %75 = and %73, %74 : s32i
        %76 = cast(int_to_bool) %75 : bool
        if %76 {
            %81 = get_global @printf : ((s8i*, ...) -> s32i)*
            %82 = get_global @.str.20 : s8i[11]*
            %83 = cast(array_to_ptrdecay) %82 : s8i*
            %84 = call @printf(%83) : s32i [all]
            yield
        } else {
            %77 = get_global @printf : ((s8i*, ...) -> s32i)*
            %78 = get_global @.str.21 : s8i[10]*
            %79 = cast(array_to_ptrdecay) %78 : s8i*
            %80 = call @printf(%79) : s32i [all]
            yield
        }
        yield
    }
    scope {
        %47 = load %3 : s8i, align 1
        %48 = cast(integral) %47 : s32i
        %49 = cast(integral) %48 : s64i
        %50 = call @__ctype_b_loc() : u16i** [const]
        %51 = load %50 : u16i*, align 8
        %52 = ptr_stride %51, %49 : u16i*
        %53 = load %52 : u16i, align 2
        %54 = cast(integral) %53 : s32i
        %55 = const 8192 : s32i
        %56 = and %54, %55 : s32i
        %57 = cast(int_to_bool) %56 : bool
        if %57 {
            %62 = get_global @printf : ((s8i*, ...) -> s32i)*
            %63 = get_global @.str.22 : s8i[11]*
            %64 = cast(array_to_ptrdecay) %63 : s8i*
            %65 = call @printf(%64) : s32i [all]
            yield
        } else {
            %58 = get_global @printf : ((s8i*, ...) -> s32i)*
            %59 = get_global @.str.23 : s8i[10]*
            %60 = cast(array_to_ptrdecay) %59 : s8i*
            %61 = call @printf(%60) : s32i [all]
            yield
        }
        yield
    }
    scope {
        %28 = load %4 : s8i, align 1
        %29 = cast(integral) %28 : s32i
        %30 = cast(integral) %29 : s64i
        %31 = call @__ctype_b_loc() : u16i** [const]
        %32 = load %31 : u16i*, align 8
        %33 = ptr_stride %32, %30 : u16i*
        %34 = load %33 : u16i, align 2
        %35 = cast(integral) %34 : s32i
        %36 = const 8192 : s32i
        %37 = and %35, %36 : s32i
        %38 = cast(int_to_bool) %37 : bool
        if %38 {
            %43 = get_global @printf : ((s8i*, ...) -> s32i)*
            %44 = get_global @.str.24 : s8i[16]*
            %45 = cast(array_to_ptrdecay) %44 : s8i*
            %46 = call @printf(%45) : s32i [all]
            yield
        } else {
            %39 = get_global @printf : ((s8i*, ...) -> s32i)*
            %40 = get_global @.str.25 : s8i[15]*
            %41 = cast(array_to_ptrdecay) %40 : s8i*
            %42 = call @printf(%41) : s32i [all]
            yield
        }
        yield
    }
    %12 = get_global @printf : ((s8i*, ...) -> s32i)*
    %13 = get_global @.str.26 : s8i[4]*
    %14 = cast(array_to_ptrdecay) %13 : s8i*
    %15 = load %1 : s8i, align 1
    %16 = cast(integral) %15 : s32i
    %17 = cast(integral) %16 : s64i
    %18 = call @__ctype_b_loc() : u16i** [const]
    %19 = load %18 : u16i*, align 8
    %20 = ptr_stride %19, %17 : u16i*
    %21 = load %20 : u16i, align 2
    %22 = cast(integral) %21 : s32i
    %23 = const 1024 : s32i
    %24 = and %22, %23 : s32i
    %25 = call @printf(%14, %24) : s32i [all]
    %26 = const 0 : s32i
    store %26, %0
    %27 = load %0 : s32i
    return %27
}
